--- a/Bootstrap/Bootstrap_1/25.10.23.html
+++ b/Bootstrap/Bootstrap_1/25.10.23.html
@@ -10,20 +10,22 @@
             width: 800px;
             height: 500px;
         }
-        p {
+
+        p{
             /* column-count: 3; */
             column-width: 300px;
             text-align: justify;
-            font-size: 16px;
-            color: blue;
+            font-size: 15px;
+            color: darkgoldenrod;
             column-gap: 60px;
-            column-rule: 5px solid black;
+            column-rule: 5px solid green;
+            box-sizing: content-box;
         }
     </style>
 </head>
 
 <body>
-
+    
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
         standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
         a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
@@ -61,15 +63,23 @@
         the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
         release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software
         like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    <!-- <div id="divRef">
 
-    </div>
+
+
+
+
+
+
+    <div id="divRef">
+
+    </div><br>
+    <hr>
 
     <div class="mapouter">
         <div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0"
                 marginwidth="0"
-                src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=digital lync&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
-                href="https://connectionsgame.org/">Connections Unlimited</a></div>
+                src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=digital lync&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+        </div>
         <style>
             .mapouter {
                 position: relative;
@@ -90,15 +100,15 @@
                 height: 400px !important;
             }
         </style>
-    </div> -->
+    </div>
 
     <script>
         function initMap() {
-            const center = new google.maps.LatLng(17.4575952, 78.3613744);
+            const center = new google.maps.LatLng(17.7138578, 83.3143346);
 
             const map = new google.maps.Map(document.getElementById('divRef'), {
                 center: center,
-                zoom: 12
+                zoom: 16
             });
 
             const marker = new google.maps.Marker({
@@ -109,7 +119,6 @@
         }
 
     </script>
-
 
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzWiOJOgrTfPipicFDKY3tv6WLVkITx38&callback=initMap"></script>
